<resources>
    <string name="app_name">Vocabulary</string>
    <string name="edText_hint1">Слово</string>
    <string name="edText_hint2">Перевод</string>
    <string name="addButton">Добавить в словарь</string>
    <string name="goGame">Начать тренировку</string>
    <string name="seeDictionary">Открыть словарь</string>
    <string name="delWord">Удалить слово</string>
    <string name="text_delWord">Слово будет удалено из словаря</string>
    <string name="exText_hint3">Удаляемое слово</string>
    <string name="button_back">Назад</string>
    <string name="button_delete">Удалить</string>
    <string name="add_okay">Слова успешно добавлены</string>
    <string name="was_words">Такая пара уже существует</string>
    <string name="edTextIsNull">Заполните поля</string>
    <string name="incorrect_text">Введены некорректные данные</string>
    <string name="delete_okay">Слово успешно удалено</string>
    <string name="isNotWord">Слово не найдено</string>
    <string name="edTextIsNull2">Введите слово</string>
    <string name="clearAll">Очистить всё</string>
    <string name="EnRu">En-Ru</string>
    <string name="RuEn">Ru-En</string>
    <string name="YouAreSure">Вы уверены, что хотите очистить словарь?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>
    <string name="textForQuestion1">Удалить слово \"</string>
    <string name="textForQuestion2">\" из вариантов перевода слова \"</string>
    <string name="textForQuestion3">\"?</string>
    <string name="switch_var">Варианты ответов</string>
    <string name="check">Проверить</string>
    <string name="next">Далее</string>
    <string name="smallWords">В словаре слишком мало слов</string>
    <string name="okay">Ок</string>
    <string name="itIsTrue">Правильно</string>
    <string name="itIsFalse">Не верно</string>
    <string name="itIsTrueVar">Правильный ответ:</string>
    <string name="itIsTrueVars">Правильные ответы:</string>
    <string name="chose_true_var">Выберите правильный ответ:</string>
    <string name="dictDeleteOkay">Словарь успешно очищен</string>
</resources>