<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_dark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/word1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="12dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/edText_hint1"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorHint"
        android:textCursorDrawable="@color/ForButton"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/word2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/edText_hint2"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorHint"
        android:textCursorDrawable="@color/ForButton"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/word1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/word1"
        app:layout_constraintTop_toBottomOf="@+id/word1" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonAdd"
        android:text="@string/addButton"
        app:layout_constraintEnd_toEndOf="@+id/word2"
        app:layout_constraintStart_toStartOf="@+id/word2"
        app:layout_constraintTop_toBottomOf="@+id/word2" />

    <Button
        android:id="@+id/buttonGoGame"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonGoGame"
        android:text="@string/goGame"
        app:layout_constraintBottom_toTopOf="@+id/buttonOpenDict"
        app:layout_constraintEnd_toEndOf="@+id/buttonOpenDict"
        app:layout_constraintStart_toStartOf="@+id/buttonOpenDict" />

    <Button
        android:id="@+id/buttonOpenDict"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonOpenDict"
        android:text="@string/seeDictionary"
        app:layout_constraintBottom_toTopOf="@+id/buttonDelWord"
        app:layout_constraintEnd_toEndOf="@+id/buttonDelWord"
        app:layout_constraintStart_toStartOf="@+id/buttonDelWord"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/buttonDelWord"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonDelWord"
        android:text="@string/delWord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>