<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_dark"
    tools:context=".TrainingActivity">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbEnRu1"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ForButton"
            android:onClick="onClickRbEnRu1"
            android:text="@string/EnRu"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/rbRuEn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ForButton"
            android:onClick="onClickRbRuEn1"
            android:text="@string/RuEn"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/switchButton1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/ForButton"
        android:text="@string/switch_var"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/wordWas1"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchButton1" />

    <EditText
        android:id="@+id/edTextTranslate"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/edText_hint2"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/colorHint"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/wordWas1"
        app:layout_constraintStart_toStartOf="@+id/wordWas1"
        app:layout_constraintTop_toBottomOf="@+id/wordWas1" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonCheck"
        android:text="@string/check"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/edTextTranslate"
        app:layout_constraintStart_toStartOf="@+id/edTextTranslate"
        app:layout_constraintTop_toBottomOf="@+id/edTextTranslate" />

    <TextView
        android:id="@+id/textResult1"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCheck" />

    <TextView
        android:id="@+id/textTrueVar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textResult1"
        app:layout_constraintStart_toStartOf="@+id/textResult1"
        app:layout_constraintTop_toBottomOf="@+id/textResult1" />

    <Button
        android:id="@+id/buttonNext1"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonNext1"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rcView1"
        app:layout_constraintStart_toStartOf="@+id/rcView1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTrueVar1" />
</androidx.constraintlayout.widget.ConstraintLayout>