<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_dark"
    tools:context=".VocabularyActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonClearAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonClearAll"
        android:text="@string/clearAll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/buttonClearAll"
        app:layout_constraintStart_toStartOf="@+id/buttonClearAll"
        app:layout_constraintTop_toBottomOf="@+id/buttonClearAll">

        <RadioButton
            android:id="@+id/rbEnRu"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ForButton"
            android:onClick="onClickRbEnRu"
            android:text="@string/EnRu"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/rbRuEn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ForButton"
            android:onClick="onClickRbRuEn"
            android:text="@string/RuEn"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>