<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/textViewColor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="280dp"
            android:layout_height="20dp"
            android:textSize="26sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/wordDel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:width="270dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/exText_hint3"
            android:inputType="textPersonName"
            android:minWidth="270dp"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/colorHint"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:width="240dp"
            android:minWidth="240dp"
            android:paddingLeft="8dp"
            android:text="@string/text_delWord"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/wordDel"
            app:layout_constraintStart_toStartOf="@+id/wordDel"
            app:layout_constraintTop_toBottomOf="@+id/wordDel" />

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="53dp"
            android:width="129dp"
            android:backgroundTint="@color/ForButton"
            android:minWidth="129dp"
            android:text="@string/button_delete"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="14dp"
            android:width="110dp"
            android:background="@android:color/transparent"
            android:minWidth="110dp"
            android:text="@string/button_back"
            android:textColor="@color/ForButton"
            app:layout_constraintEnd_toEndOf="@+id/buttonDel"
            app:layout_constraintStart_toStartOf="@+id/buttonDel"
            app:layout_constraintTop_toBottomOf="@+id/buttonDel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>