<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Blue_dark"
    tools:context=".TrainingActivity">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbEnRu2"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ForButton"
            android:onClick="onClickRbEnRu2"
            android:text="@string/EnRu"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/rbRuEn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/ForButton"
            android:onClick="onClickRbRuEn2"
            android:text="@string/RuEn"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/switchButton2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:buttonTint="@color/ForButton"
        android:text="@string/switch_var"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/wordWas2"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchButton2" />

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:backgroundTint="@color/ForButton"
        android:onClick="onClickButtonNext2"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_4"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:onClick="onClickText4"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_3"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="onClickText3"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_4"
        app:layout_constraintEnd_toEndOf="@+id/textView_4"
        app:layout_constraintStart_toStartOf="@+id/textView_4" />

    <TextView
        android:id="@+id/textView_2"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="onClickText2"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_3"
        app:layout_constraintEnd_toEndOf="@+id/textView_3"
        app:layout_constraintStart_toStartOf="@+id/textView_3" />

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:onClick="onClickText1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_2"
        app:layout_constraintEnd_toEndOf="@+id/textView_2"
        app:layout_constraintStart_toStartOf="@+id/textView_2" />

    <TextView
        android:id="@+id/textView_v"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_1"
        app:layout_constraintEnd_toEndOf="@+id/textView_1"
        app:layout_constraintStart_toStartOf="@+id/textView_1" />

</androidx.constraintlayout.widget.ConstraintLayout>